feat(verification): add compiler-owned blueprint schemas